<resources>

    // 기본 정보
    <string name="app_name">헤엄</string>
    <string name="none"> </string>
    <string name="done">확인</string>
    <string name="authorization">AAAAK0p2Znc:APA91bFfNLF5VZODxRqr8q41rahjhn9UZUWzSg0w9EaYaXU5jihaN48m8_h-sHPT3JD5ScwFkhqNg9mNfFTa1loqHZt9H4RyDayofrxFQ8tXQUiq5dFYdHxhqFQ_MsG2jCn_0CJTYvr7</string>
    <string name="post_fcm">https://fcm.googleapis.com/fcm/send</string>

    // Bottom Fragment
    <string name="title_home">Home</string>
    <string name="title_dashboard">DashBoard</string>
    <string name="title_notifications">Notification</string>

    // 로그인 화면
    <string name="find">아이디/비밀번호 찾기</string>
    <string name="login">로그인</string>
    <string name="register">회원 가입</string>
    <string name="profile">프로필</string>
    <string name="delete">글 삭제하기</string>

    // 개인정보 변경
    <string name="change_profile">회원정보 변경</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="change_email">이메일 변경</string>
    <string name="password_now">현재 비밀번호</string>
    <string name="password_new">새 비밀번호</string>
    <string name="password_new_check">새 비밀번호 확인</string>
    <string name="message_change_password">비밀번호를 정확하게 입력해주세요.</string>
    <string name="success_change_password">비밀번호가 변경되었습니다.</string>
    <string name="success_change_email">이메일이 변경되었습니다.</string>
    <string name="message_change_password_duplicate">현재 사용중인 비밀번호입니다.</string>
    <string name="message_change_email_duplicate">현재 사용중인 이메일입니다.</string>
    <string name="message_change_email_none">이메일을 정확하게 입력해주세요.</string>
    <string name="email_now">현재 이메일</string>
    <string name="email_new">변경할 이메일</string>

    // 개인정보 찾기
    <string name="find_id">아이디 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="message_find_error">* 입력 정보 오류시 이메일이 전송되지 않습니다.</string>

    // 회원가입
    <string name="name">이름</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="email">이메일</string>
    <string name="verification">인증</string>
    <string name="certification">인증 번호</string>
    <string name="message_register_name_length">2~10자 사이로 길이를 맞춰주세요.</string>
    <string name="message_register_name_form">한글로 입력해주세요.</string>
    <string name="message_register_id_length">6~20자 사이로 길이를 맞춰주세요.</string>
    <string name="message_register_id_form">한글이 아닌 영문 또는 숫자로 입력해주세요.</string>
    <string name="message_register_password_length">8~30자 사이로 길이를 맞춰주세요</string>
    <string name="message_register_blank">공백을 포함할 수 없습니다.</string>
    <string name="message_register_password_incorrect">비밀번호가 일치하지 않습니다.</string>
    <string name="message_register_email_format">이메일 형식이 올바르지 않습니다.</string>
    <string name="message_register_code_incorrect">인증 코드가 일치하지 않습니다.</string>
    <string name="message_register_send_email">이메일을 전송하였습니다.</string>
    <string name="message_register_duplicate_id">이미 사용중인 아이디입니다.</string>
    <string name="message_register_duplicate_email">이미 사용중인 이메일입니다.</string>
    <string name="message_register_failed">입력 정보를 다시 확인해주세요.</string>
    <string name="message_error">오류가 발생하였습니다.</string>
    <string name="message_isBlank">해당란이 공백입니다.</string>

    // FCM 알림
    <string name="message_comments">작성한 게시글에 댓글이 달렸습니다.</string>
    <string name="message_comments_comments">작성한 게시글에 대댓글이 달렸습니다.</string>

    // 게시글 Fragment
    <string name="free_board">자유 게시판</string>
    <string name="info_board">정보 게시판</string>
    <string name="store_board">수족관 게시판</string>
    <string name="dictionary_board">물고기 백과사전</string>
    <string name="swimming_board">헤엄 게시판</string>
    <string name="free">Free</string>
    <string name="info">Info</string>
    <string name="review">Review</string>
    <string name="dictionary">Dictionary</string>
    <string name="freeBoardContents">자유롭게 이야기를 나눠보세요.</string>
    <string name="infoBoardContents">다양한 정보를 헤엄 유저들과 함께 공유해요.</string>
    <string name="storeBoardContents">수족관에 대한 후기를 서로 공유해요.</string>
    <string name="message_main">물고기에 대한 다양한 정보를 함께 공유해요.</string>
    <string name="message_swimming">물고기에 대한 다양한 정보가 이곳에 가득!</string>
    <string name="message_fish">이달의 물고기</string>
    <string name="message_dictionary">유저들이 만들어가는 헤엄 물고기 백과사전!</string>
    <string name="map">유저들이 리뷰한 우리 동네 수족관</string>

    // 게시글
    <string name="board_write">게시글 작성하기</string>
    <string name="board_title">제목</string>
    <string name="board_success">글쓰기를 완료하였습니다.</string>
    <string name="write">작성</string>
    <string name="anonymous">익명</string>
    <string name="loading">헤엄 중..</string>
    <string name="comments">이 곳에 댓글을 입력하세요.</string>
    <string name="message_image">이미지 로딩에 오류가 발생하였습니다.</string>
    <string name="message_comment">댓글 로딩에 오류가 발생하였습니다.</string>
    <string name="message_delete_board">해당 글이 삭제되었습니다.</string>
    <string name="message_delete">삭제되었습니다.</string>
    <string name="select_map">수족관 위치 선택하기</string>
    <string name="store">가게 이름</string>
    <string name="our_store">우리 동네 수족관 리뷰</string>
    <string name="like">좋아요를 눌렀습니다</string>
    <string name="unLike">좋아요를 취소하였습니다</string>
    <string name="message_select_map">지도를 클릭하시면 마커가 생성됩니다.</string>
    <string name="message_board">게시글 작성 시 다음과 같은 사항에 주의해주세요.\n\n1. 욕설, 비하, 음란물, 개인정보가 포함된 게시글 작성 금지\n2. 선거, 정치 관련 게시글 작성 금지\n3.기타 약관 및 현행법에 어긋나는 행위 금지
    \n\n해당 규칙을 어길 시 게시글은 삭제될 수 있습니다.</string>

    <string name="search">이 곳에 검색어를 입력하세요.</string>
    <string name="search_store">이 곳에 수족관명을 입력하세요.</string>
    <string name="searchError">2글자 이상 입력해주세요.</string>
    <string name="click">리스트를 클릭하시면 상세보기로 이동합니다.</string>
    <string name="like_store">좋아요를 누른 리뷰들</string>
    <string name="none_like">좋아요를 누른 리뷰가 존재하지 않습니다. </string>

    // Profile
    <string name="withdraw">회원 탈퇴</string>
    <string name="logout">로그아웃</string>
    <string name="activity">활동</string>
    <string name="myBoard">내가 쓴 게시글</string>
    <string name="myComment">댓글 단 게시글</string>
    <string name="myLike">좋아요 누른 게시글</string>
    <string name="board_delete">지우기</string>
    <string name="setting">설정</string>
    <string name="setting_alarm">알림 설정</string>
    <string name="alarm_comments">댓글 알림</string>
    <string name="message_logout">로그아웃 되었습니다.</string>
    <string name="push_message">푸쉬 메시지</string>
    <string name="alarm_tab">알림 탭</string>
    <string name="message_withdraw">회원탈퇴가 완료되었습니다.</string>

    // 이달의 물고기
    <string name="fish1_name">퍼큘라 크라운(Percula Clown)</string>
    <string name="fish1_contents">주황흰동가리(Amphiprion percula)는 농어목 자리돔과 흰동가리아과에 속하는 바닷물고기의 일종으로, 관상어로 사육되는 대표적인 물고기이다. 영명인 퍼큘라 크라운(percula clown)이라고 이르기도 한다.
        애니메이션 영화인 니모를 찾아서의 흰동가리 부자의 모델이 되었던 종이다. 팔라우 등 오세아니아의 해역에서 발견된다.</string>

    <string name="fish2_name">블루탱 (Blue Tang)</string>
    <string name="fish2_contents">농어목 양쥐돔과에 속하는 바다 어류의 일종. 남양쥐돔속의 유일한 단일종이다. 시중에서 흔히 블루탱이라는 명칭으로 유통되는 유명한 물고기다.
        서구권 나라에서는 흔히 \'Blue tang\'이라고 부르지만 \'Regal tang\'이나 \'Palette surgeonfish\', \'Royal blue tang\' 등 수많은 명칭이 존재한다.</string>

    <string name="fish3_name">구피 (Guppy)</string>
    <string name="fish3_contents">구피(guppy)는 포에킬리아과에 속하며 학명은 Poecilia Reticulata 이다. 몸길이는 수컷이 3 cm, 암컷이 4 cm 가량으로 송사리와 비슷하나 몸이 더 가늘고 길며 빨강·노랑·파랑·검정 등의 여러 빛깔의 무늬가 섞여 있다.
        금붕어와 함께 세계에서 가장 인기 있는 애완용 물고기로 깃털 같은 꼬리와 지느러미가 아름답다. 모기의 유충인 장구벌레를 잡아 먹으며 베네수엘라와 인근 섬 지역의 따뜻한 하천이 원산지이다.</string>

    <string name="privacy_title">약관 동의</string>
    <string name="prvacy_contents">헤엄 개인정보 처리방침</string>
    <string name="privacy_agree">다음 약관에 대해 동의합니다.</string>

</resources>
