<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_exit_to_app_24"
            android:title="@string/logout" />

        <item
            android:id="@+id/nav_change"
            android:icon="@drawable/round_https_24"
            android:title="@string/change_profile" />
    </group>

    <item android:title="@string/activity">
        <menu>
            <item
                android:id="@+id/nav_myBoard"
                android:icon="@drawable/round_create_24"
                android:title="@string/myBoard" />

            <item
                android:id="@+id/nav_myComment"
                android:icon="@drawable/round_comment_24"
                android:title="@string/myComment" />

            <item
                android:id="@+id/nav_myLike"
                android:icon="@drawable/round_favorite_24"
                android:title="@string/myLike" />
        </menu>
    </item>
</menu>
