<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.swimming.ui.user.UserViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user.FindIdFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/EditTheme_Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/colorDarkWhite"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_find_id_name"
                    style="@style/EditTheme"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:inputType="text"
                    android:privateImeOptions="defaultInputmode=korean"
                    android:text="@={viewModel.name}" />
            </LinearLayout>

            <TextView
                style="@style/EditTheme_Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/email" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/colorDarkWhite"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_find_id_email"
                    style="@style/EditTheme"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_find_id"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_find_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="@{() -> viewModel.findId()}"
                android:text="@string/find_id"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:text="@string/message_find_error" />

        </LinearLayout>

    </FrameLayout>
</layout>