<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.swimming.ui.user.UserViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                style="@style/TextTheme_Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_now" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/colorWhiteVariant"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <EditText
                    android:id="@+id/edit_change_email_now"
                    style="@style/EditTheme_Primary"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:backgroundTint="@color/colorWhiteVariant"
                    android:importantForAutofill="no"
                    android:inputType="text|textEmailAddress"
                    tools:ignore="Autofill,LabelFor" />
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/TextTheme_Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/email_new" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/colorWhiteVariant"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">


                    <EditText
                        android:id="@+id/edit_change_email_new"
                        style="@style/EditTheme_Primary"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:backgroundTint="@color/colorWhiteVariant"
                        android:hint="@string/none"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:labelFor="@+id/edit_change_email"
                        tools:ignore="LabelFor" />
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btn_change_verification"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="3"
                    android:backgroundTint="@color/colorPrimaryVariant"
                    android:text="@string/verification"
                    android:textColor="@color/colorWhiteVariant" />

            </LinearLayout>

            <TextView
                style="@style/TextTheme_Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/certification" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/colorWhiteVariant"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <EditText
                    android:id="@+id/edit_change_code"
                    style="@style/EditTheme_Primary"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:backgroundTint="@color/colorWhiteVariant"
                    android:importantForAutofill="no"
                    android:inputType="number|text|textEmailAddress"
                    tools:ignore="Autofill,LabelFor" />
            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progress_change_email"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:indeterminateTint="@color/colorPrimary"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_change_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/change_email"
                android:textColor="@color/colorWhiteVariant" />

        </LinearLayout>

    </FrameLayout>

</layout>